--- a/Src/CreateChocolateyPackage.nuspec
+++ b/Src/CreateChocolateyPackage.nuspec
@@ -2,17 +2,17 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
 	<metadata>
 		<id>CreateChocolateyPackage</id>
-		<version>$version$</version>
+		<version>0.0.1</version>
 		<authors>Chris Dostert</authors>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
 		<description>
-			A Poshtask that creates one or more Chocolatey packages			
+			A PoshDevOps task that creates one or more Chocolatey packages			
 		</description>
 		<tags>Powershell PoshDevOps Chocolatey</tags>
 		<projectUrl>https://github.com/PoshDevOps/CreateChocolateyPackage</projectUrl>
         <dependencies />
 	</metadata>	
 	<files>
-		<file src="**" target="tools\CreateChocolateyPackage" exclude="**\.nuspec"/>
+		<file src="**" target="" exclude="**\.nuspec"/>
 	</files>
 </package>
